<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewProgressCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_32"
        android:text="@string/loading_characters"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarCharacters"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:max="100"
        app:layout_constraintEnd_toEndOf="@id/textViewProgressCharacters"
        app:layout_constraintStart_toStartOf="@id/textViewProgressCharacters"
        app:layout_constraintTop_toBottomOf="@id/textViewProgressCharacters" />

    <TextView
        android:id="@+id/textViewProgressEpisodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_32"
        android:text="@string/loading_episodes"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/progressBarCharacters" />

    <ProgressBar
        android:id="@+id/progressBarEpisodes"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:max="100"
        app:layout_constraintEnd_toEndOf="@id/textViewProgressEpisodes"
        app:layout_constraintStart_toStartOf="@id/textViewProgressEpisodes"
        app:layout_constraintTop_toBottomOf="@id/textViewProgressEpisodes" />

    <TextView
        android:id="@+id/textViewProgressLocations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_32"
        android:text="@string/loading_locations"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/progressBarEpisodes" />

    <ProgressBar
        android:id="@+id/progressBarLocations"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indent_8"
        android:max="100"
        app:layout_constraintEnd_toEndOf="@id/textViewProgressLocations"
        app:layout_constraintStart_toStartOf="@id/textViewProgressLocations"
        app:layout_constraintTop_toBottomOf="@id/textViewProgressLocations" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reload"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>